docs: optimize landing page copy and feature order per autojump philosophy

--- a/WayPoint/en.lproj/Localizable.strings
+++ b/WayPoint/en.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "Exclude Path" = "Exclude Path";
 "Toggle Favorite" = "Toggle Favorite";
 "About" = "About";
+"Copy Path" = "Copy Path";
 "General" = "General";
 "Shortcuts" = "Shortcuts";
 "Exclusions" = "Exclusions";
