--- a/WayPoint/zh-Hans.lproj/Localizable.strings
+++ b/WayPoint/zh-Hans.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "Exclude Path" = "排除路径";
 "Toggle Favorite" = "收藏/取消收藏";
 "About" = "关于";
+"Copy Path" = "拷贝路径";
 "General" = "通用";
 "Shortcuts" = "快捷键";
 "Exclusions" = "排除";
