feat: add WayPoint Insights and optimize website for China accessibility
- Implement jump history tracking in StorageManager
- Create InsightsView to visualize productivity stats (Time Saved, Top Folders)
- Add 'Insights' tab to Settings with modern card-based UI
- Optimize GitHub Pages CDN links using reliable domestic mirrors
- Complete localization for all new features

--- a/WayPoint/en.lproj/Localizable.strings
+++ b/WayPoint/en.lproj/Localizable.strings
@@ -63,6 +63,14 @@
 "Download" = "Download";
 "Up to Date" = "Up to Date";
 "You are using the latest version." = "You are using the latest version.";
+"Insights" = "Insights";
+"WayPoint Insights" = "WayPoint Insights";
+"Your productivity dashboard" = "Your productivity dashboard";
+"Jumps Today" = "Jumps Today";
+"Jumps Weekly" = "Jumps Weekly";
+"Time Saved" = "Time Saved";
+"Total Jumps" = "Total Jumps";
+"Top Destination (Weekly)" = "Top Destination (Weekly)";
 "Language" = "Language";
 "System Default" = "System Default";
 "Restart Required" = "Restart Required";
