--- a/WayPoint/zh-Hans.lproj/Localizable.strings
+++ b/WayPoint/zh-Hans.lproj/Localizable.strings
@@ -1,78 +1,130 @@
+"Search Paths..." = "搜索路径...";
+"Insights" = "洞察";
 "Settings" = "设置";
-"Done" = "完成";
+"General" = "常规";
+"Shortcuts" = "快捷键";
+"Exclusions" = "排除项";
+"About" = "关于";
+"Language" = "语言";
+"App Language" = "应用语言";
+"Please restart the app to apply language changes." = "请重启应用以使语言更改生效。";
+"Restart Now" = "立即重启";
 "Global Shortcut" = "全局快捷键";
-"Press to Record" = "点击录制";
-"Click to record a new shortcut" = "点击录制新快捷键";
-"Excluded Paths" = "排除路径";
-"No excluded paths" = "暂无排除路径";
-"Type Shortcut..." = "输入快捷键...";
-"Searching File System..." = "正在搜索文件系统...";
-"No local matches" = "无本地匹配";
-"No items found" = "未找到项目";
-"Press Return ↵ to search File System" = "按回车 ↵ 搜索文件系统";
-"Open" = "打开";
-"Paste" = "粘贴";
-"Term" = "终端";
-"Fav" = "收藏";
+"Main Hotkey to toggle WayPoint" = "用于切换 WayPoint 的全局热键";
+"Action Shortcuts" = "操作快捷键";
+"Preferred Apps" = "首选应用";
 "Editor" = "编辑器";
-"Exclude" = "排除";
-"Open in Finder" = "在 Finder 中打开";
-"Paste to Dialog" = "粘贴到对话框";
-"Open in Terminal" = "在终端中打开";
-"Open in Editor" = "在编辑器中打开";
-"Copy Path" = "拷贝路径";
-"Unfavorite" = "取消收藏";
-"Favorite" = "收藏";
-"Exclude from list" = "从列表中排除";
-"Search..." = "搜索文件夹或输入路径...";
+"Terminal" = "终端";
+"Reset to Defaults" = "恢复默认值";
+"Excluded Paths" = "排除路径";
+"No excluded paths" = "没有已排除的路径";
+"Check for Updates" = "检查更新";
+"Version" = "版本";
+"New Version Available" = "新版本可用";
+"Download" = "下载";
+"Up to Date" = "已是最新";
+"You are using the latest version." = "您正在使用最新版本。";
 
-// Tabs
-"Recent" = "最近";
-"Favorites" = "收藏";
-"items" = "个项目";
-
-// AppDelegate
-"About WayPoint" = "关于 WayPoint";
-"Show Search Window" = "显示搜索窗口";
-"Quit" = "退出";
-"Quickly navigate to your common directories" = "快速导航到你的常用目录";
-"Shortcut: Option + Space" = "快捷键: Alt + Space";
-"OK" = "确定";
+/* Context Actions / Shortcuts */
 "Inject" = "注入";
 "Inject to Dialog" = "注入到对话框";
-"Permission Required" = "需要辅助功能权限";
-"WayPoint needs Accessibility permissions to inject paths. Please enable it in System Settings." = "WayPoint 需要辅助功能权限才能注入路径。请在系统设置中开启。";
-"Open Settings" = "打开设置";
-"Cancel" = "取消";
-"Action Shortcuts" = "动作快捷键";
-"Reset to Defaults" = "重置为默认值";
-"Recording..." = "录制中...";
+"Quick Look Preview" = "快速预览";
+"Open in Finder" = "在 Finder 中打开";
+"Open in Terminal" = "在终端中打开";
+"Open in Editor" = "在编辑器中打开";
+"Copy Path" = "复制路径";
+"Favorite" = "收藏";
+"Unfavorite" = "取消收藏";
 "Exclude Path" = "排除路径";
-"Toggle Favorite" = "收藏/取消收藏";
-"About" = "关于";
-"Copy Path" = "拷贝路径";
-"General" = "通用";
-"Shortcuts" = "快捷键";
-"Exclusions" = "排除";
-"Main Hotkey to toggle WayPoint" = "唤起 WayPoint 的主快捷键";
-"Customize Action Shortcuts" = "自定义动作快捷键";
-"Select a path in search results and press ⌘Delete to exclude it." = "在搜索结果中选中路径并按 ⌘Delete 即可排除。";
-"Check for Updates" = "检查更新";
-"New Version Available" = "发现新版本";
-"Version" = "版本";
-"Download" = "下载更新";
-"Up to Date" = "已是最新";
-"You are using the latest version." = "您当前使用的已是最新版本。";
-"Insights" = "洞察";
-"WayPoint Insights" = "WayPoint 效率洞察";
+"Exclude from list" = "从列表中排除";
+"Preview" = "预览";
+"Fav" = "收藏";
+"Term" = "终端";
+"Set Alias" = "设置别名";
+"Enter Alias" = "输入别名";
+"Rename" = "重命名";
+"Delete Alias" = "删除别名";
+"Remove from History" = "从历史记录中移除";
+"Add to Exclusions" = "添加到排除项";
+
+/* Insights & Stats */
+"Recent" = "最近";
+"Favorites" = "收藏";
+"WayPoint Insights" = "WayPoint 洞察";
 "Your productivity dashboard" = "您的生产力仪表盘";
+"Recent Folders" = "最近访问文件夹";
+"No recent folders found." = "未发现访问记录。";
+"Ranked by access frequency" = "按访问频率排序";
 "Jumps Today" = "今日跳转";
 "Jumps Weekly" = "本周跳转";
-"Time Saved" = "累计节省时间";
-"Total Jumps" = "总跳转次数";
-"Top Destination (Weekly)" = "本周最常访问";
-"Language" = "语言";
-"System Default" = "系统默认";
-"Restart Required" = "需要重启";
-"Please restart the app to apply language changes." = "请重启应用以应用语言更改。";
-"Restart Now" = "立即重启";
+"Time Saved" = "节省时间";
+"Total Jumps" = "总跳转数";
+"Top Destination (Weekly)" = "本周最常去";
+"Average Time Saved per Action" = "平均每次节省时间";
+"Total Actions Performed" = "总计操作次数";
+"Estimated Total Time Saved" = "累计节省总时长";
+"Access Frequency" = "访问频率";
+"Last Accessed" = "最后访问";
+"seconds" = "秒";
+"minutes" = "分";
+"hours" = "时";
+"days" = "天";
+"Usage Statistics" = "使用统计";
+
+/* Rules Engine */
+"Rules" = "规则";
+"Add New Rule" = "添加新规则";
+"Restore Defaults" = "恢复默认";
+"View Rule" = "查看规则";
+"Edit Rule" = "编辑规则";
+"Create Context Rule" = "创建上下文规则";
+"Rule Name / Label" = "显示名称 / 标签";
+"e.g. npm start" = "如 npm start";
+"Trigger Condition" = "触发条件";
+"If folder contains (e.g. package.json)" = "匹配文件 (如 package.json)";
+"Action Type" = "动作类型";
+"Run in Terminal" = "在终端运行";
+"Open URL" = "打开 URL";
+"Shell Command / URL" = "Shell 命令 / URL";
+"URL Command (must output URL)" = "URL 命令 (输出结果需为合法 URL)";
+"Button Icon (SF Symbol)" = "按钮图标 (SF Symbol)";
+"Icon Name" = "图标名称";
+"Quick Select Icons" = "快捷选择图标";
+"WayPoint will show quick action buttons when these files are detected." = "当检测到匹配的文件时，工具栏将自动显示快捷动作按钮。";
+"Built-in" = "内置";
+"If folder contains" = "如果文件夹包含";
+"Add Rule" = "添加规则";
+"Save Changes" = "保存修改";
+"Cancel" = "取消";
+"Close" = "关闭";
+
+/* Menu & App */
+"Quit" = "退出";
+"Quit WayPoint" = "退出 WayPoint";
+"Set Folder Alias" = "设置文件夹别名";
+"Add an alias to make this folder easier to find." = "设置别名，搜索更快捷。";
+"Set Alias Name" = "别名名称";
+"Show help" = "显示帮助";
+"Toggle WayPoint" = "切换 WayPoint";
+"Enter path..." = "输入路径...";
+"Clear history" = "清除历史记录";
+"No results found." = "未找到结果";
+"Docker Up" = "启动 Docker";
+"Open Repo" = "打开仓库";
+"mvn install" = "Maven 安装";
+"cargo run" = "Cargo 运行";
+"Show Search Window" = "显示搜索窗口";
+"Settings..." = "设置...";
+
+/* Personality */
+"Code" = "代码";
+"Design" = "设计";
+"Clean (Git)" = "干净 (Git)";
+"%lld files changed (Git)" = "%lld 个文件已更改 (Git)";
+"Modified %@" = "修改于 %@";
+
+// Permissions
+"Permission Required" = "需要权限";
+"WayPoint needs Accessibility permissions to inject paths. Please enable it in System Settings." = "WayPoint 需要辅助功能权限来注入路径。请在系统设置中启用它。";
+"Open Settings" = "打开设置";
+"items" = "个项目";
