--- a/WayPoint/zh-Hant.lproj/Localizable.strings
+++ b/WayPoint/zh-Hant.lproj/Localizable.strings
@@ -1,77 +1,130 @@
+"Search Paths..." = "搜尋路徑...";
+"Insights" = "洞察";
 "Settings" = "設定";
-"Done" = "完成";
-"Global Shortcut" = "全域快速鍵";
-"Press to Record" = "點擊錄製";
-"Click to record a new shortcut" = "點擊錄製新快速鍵";
-"Excluded Paths" = "排除路徑";
-"No excluded paths" = "暫無排除路徑";
-"Type Shortcut..." = "輸入快速鍵...";
-"Searching File System..." = "正在搜尋檔案系統...";
-"No local matches" = "無本地匹配";
-"No items found" = "未找到項目";
-"Press Return ↵ to search File System" = "按 Return ↵ 搜尋檔案系統";
-"Open" = "打開";
-"Paste" = "貼上";
-"Term" = "終端機";
-"Fav" = "收藏";
-"Editor" = "編輯器";
-"Exclude" = "排除";
-"Open in Finder" = "在 Finder 中顯示";
-"Paste to Dialog" = "貼上至對話框";
-"Open in Terminal" = "在終端機中打開";
-"Open in Editor" = "在編輯器中打開";
-"Copy Path" = "複製路徑";
-"Unfavorite" = "取消收藏";
-"Favorite" = "收藏";
-"Exclude from list" = "從列表中排除";
-"Search..." = "搜尋資料夾或輸入路徑...";
-
-// Tabs
-"Recent" = "最近";
-"Favorites" = "收藏";
-"items" = "個項目";
-
-// AppDelegate
-"About WayPoint" = "關於 WayPoint";
-"Show Search Window" = "顯示搜尋視窗";
-"Quit" = "退出";
-"Quickly navigate to your common directories" = "快速導航至您的常用目錄";
-"Shortcut: Option + Space" = "快速鍵: Alt + Space";
-"OK" = "確定";
-"Inject" = "注入";
-"Inject to Dialog" = "注入至對話框";
-"Permission Required" = "需要輔助使用權限";
-"WayPoint needs Accessibility permissions to inject paths. Please enable it in System Settings." = "WayPoint 需要輔助使用權限才能注入路徑。請在系統設定中開啟。";
-"Open Settings" = "打開設定";
-"Cancel" = "取消";
-"Action Shortcuts" = "動作快速鍵";
-"Reset to Defaults" = "重置為預設值";
-"Recording..." = "錄製中...";
-"Exclude Path" = "排除路徑";
-"Toggle Favorite" = "收藏/取消收藏";
-"About" = "關於";
 "General" = "一般";
 "Shortcuts" = "快速鍵";
-"Exclusions" = "排除";
-"Main Hotkey to toggle WayPoint" = "呼叫 WayPoint 的主快速鍵";
-"Customize Action Shortcuts" = "自定義動作快速鍵";
-"Select a path in search results and press ⌘Delete to exclude it." = "在搜尋結果中選取路徑並按 ⌘Delete 即可排除。";
+"Exclusions" = "排除項目";
+"About" = "關於";
+"Language" = "語言";
+"App Language" = "應用程式語言";
+"Please restart the app to apply language changes." = "請重啟應用程式以套用語言更改。";
+"Restart Now" = "立即重啟";
+"Global Shortcut" = "全域快速鍵";
+"Main Hotkey to toggle WayPoint" = "用於切換 WayPoint 的全域熱鍵";
+"Action Shortcuts" = "操作快速鍵";
+"Preferred Apps" = "偏好應用程式";
+"Editor" = "編輯器";
+"Terminal" = "終端機";
+"Reset to Defaults" = "恢復預設值";
+"Excluded Paths" = "排除的路徑";
+"No excluded paths" = "沒有排除的路徑";
 "Check for Updates" = "檢查更新";
-"New Version Available" = "發現新版本";
 "Version" = "版本";
-"Download" = "下載更新";
+"New Version Available" = "新版本可用";
+"Download" = "下載";
 "Up to Date" = "已是最新";
-"You are using the latest version." = "您目前使用的已是最新版本。";
-"Insights" = "洞察";
-"WayPoint Insights" = "WayPoint 效率洞察";
+"You are using the latest version." = "您正在使用最新版本。";
+
+/* Context Actions / Shortcuts */
+"Inject" = "注入";
+"Inject to Dialog" = "注入到對話框";
+"Quick Look Preview" = "快速預覽";
+"Open in Finder" = "在 Finder 中開啟";
+"Open in Terminal" = "在終端機中開啟";
+"Open in Editor" = "在編輯器中開啟";
+"Copy Path" = "複製路徑";
+"Favorite" = "收藏";
+"Unfavorite" = "取消收藏";
+"Exclude Path" = "排除路徑";
+"Exclude from list" = "從列表中排除";
+"Preview" = "預覽";
+"Fav" = "收藏";
+"Term" = "終端機";
+"Set Alias" = "設定別名";
+"Enter Alias" = "輸入別名";
+"Rename" = "重新命名";
+"Delete Alias" = "刪除別名";
+"Remove from History" = "從歷史記錄中移除";
+"Add to Exclusions" = "添加到排除項目";
+
+/* Insights & Stats */
+"Recent" = "最近";
+"Favorites" = "收藏";
+"WayPoint Insights" = "WayPoint 洞察";
 "Your productivity dashboard" = "您的生產力儀表板";
+"Recent Folders" = "最近訪問資料夾";
+"No recent folders found." = "未發現訪問記錄。";
+"Ranked by access frequency" = "按訪問頻率排序";
 "Jumps Today" = "今日跳轉";
 "Jumps Weekly" = "本周跳轉";
-"Time Saved" = "累計節省時間";
-"Total Jumps" = "總跳轉次數";
-"Top Destination (Weekly)" = "本周最常訪問";
-"Language" = "語言";
-"System Default" = "系統預設";
-"Restart Required" = "需要重啟";
-"Please restart the app to apply language changes." = "請重啟應用以套用語言變更。";
-"Restart Now" = "立即重啟";
+"Time Saved" = "節省時間";
+"Total Jumps" = "總跳轉數";
+"Top Destination (Weekly)" = "本周最常去";
+"Average Time Saved per Action" = "平均每次節省時間";
+"Total Actions Performed" = "總計操作次數";
+"Estimated Total Time Saved" = "估計節省總時長";
+"Access Frequency" = "訪問頻率";
+"Last Accessed" = "最後訪問";
+"seconds" = "秒";
+"minutes" = "分";
+"hours" = "時";
+"days" = "天";
+"Usage Statistics" = "使用統計";
+
+/* Rules Engine */
+"Rules" = "規則";
+"Add New Rule" = "添加新規則";
+"Restore Defaults" = "恢復預設";
+"View Rule" = "查看規則";
+"Edit Rule" = "編輯規則";
+"Create Context Rule" = "創建上下文規則";
+"Rule Name / Label" = "顯示名稱 / 標籤";
+"e.g. npm start" = "如 npm start";
+"Trigger Condition" = "觸發條件";
+"If folder contains (e.g. package.json)" = "匹配檔案 (如 package.json)";
+"Action Type" = "動作類型";
+"Run in Terminal" = "在終端機執行";
+"Open URL" = "開啟 URL";
+"Shell Command / URL" = "Shell 命令 / URL";
+"URL Command (must output URL)" = "URL 命令 (輸出結果需為合法 URL)";
+"Button Icon (SF Symbol)" = "按鈕圖示 (SF Symbol)";
+"Icon Name" = "圖示名稱";
+"Quick Select Icons" = "快捷選擇圖示";
+"WayPoint will show quick action buttons when these files are detected." = "當偵測到匹配的檔案時，工具列將自動顯示快捷動作按鈕。";
+"Built-in" = "內建";
+"If folder contains" = "如果資料夾包含";
+"Add Rule" = "添加規則";
+"Save Changes" = "保存修改";
+"Cancel" = "取消";
+"Close" = "關閉";
+
+/* Menu & App */
+"Quit" = "退出";
+"Quit WayPoint" = "退出 WayPoint";
+"Set Folder Alias" = "設定資料夾別名";
+"Add an alias to make this folder easier to find." = "設定別名，搜尋更快捷。";
+"Set Alias Name" = "別名名稱";
+"Show help" = "顯示幫助";
+"Toggle WayPoint" = "切換 WayPoint";
+"Enter path..." = "輸入路徑...";
+"Clear history" = "清除歷史記錄";
+"No results found." = "未找到結果";
+"Docker Up" = "啟動 Docker";
+"Open Repo" = "打開倉庫";
+"mvn install" = "Maven 安裝";
+"cargo run" = "Cargo 運行";
+"Show Search Window" = "顯示搜尋視窗";
+"Settings..." = "設定...";
+
+/* Personality */
+"Code" = "程式碼";
+"Design" = "設計";
+"Clean (Git)" = "乾淨 (Git)";
+"%lld files changed (Git)" = "%lld 個檔案已更改 (Git)";
+"Modified %@" = "修改於 %@";
+
+// Permissions
+"Permission Required" = "需要權限";
+"WayPoint needs Accessibility permissions to inject paths. Please enable it in System Settings." = "WayPoint 需要輔助功能權限來注入路徑。請在系統設定中啟用它。";
+"Open Settings" = "打開設定";
+"items" = "個項目";
